Bug 314344 - Crash when switching/removing organize collection presets [@ FilenameLayoutWidget::inferScheme]
Summary: Crash when switching/removing organize collection presets [@ FilenameLayoutWi...
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Collections/Organize Files Dialog (other bugs)
Version First Reported In: 2.7-git
Platform: Debian unstable Linux
: NOR critical
Target Milestone: 2.8
Assignee: Amarok Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-02-03 11:51 UTC by Thierry Göckel
Modified: 2013-02-03 19:12 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.8
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thierry Göckel 2013-02-03 11:51:13 UTC
Amarok crashes when doing anything with old organize collection presets (e.g. switching presets, trying to remove/update, etc.)

See backtrace in "Additional Information".

Cheers!

Reproducible: Always




Application: Amarok (amarok), signal: Aborted
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f420da647a0 (LWP 12842))]

Thread 10 (Thread 0x7f41e9a7b700 (LWP 12859)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:162
#1  0x00007f41eb45ff5f in ?? () from /usr/lib/libvlccore.so.5
#2  0x00007f41f8413764 in ?? () from /usr/lib/x86_64-linux-gnu/libGL.so.1
#3  0x00007f4206a73b50 in start_thread (arg=<optimized out>) at pthread_create.c:304
#4  0x00007f420a257a7d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#5  0x0000000000000000 in ?? ()

Thread 9 (Thread 0x7f41e8076700 (LWP 12864)):
#0  0x00007f420a24ce33 in *__GI___poll (fds=<optimized out>, nfds=<optimized out>, timeout=-1) at ../sysdeps/unix/sysv/linux/poll.c:87
#1  0x00007f4203871624 in g_main_context_poll (n_fds=1, fds=0x1770b30, timeout=-1, context=0x1770cf0, priority=<optimized out>) at /tmp/buildd/glib2.0-2.33.12+really2.32.4/./glib/gmain.c:3440
#2  g_main_context_iterate (context=context@entry=0x1770cf0, block=block@entry=1, dispatch=dispatch@entry=1, self=<error reading variable: Unhandled dwarf expression opcode 0xfa>) at /tmp/buildd/glib2.0-2.33.12+really2.32.4/./glib/gmain.c:3141
#3  0x00007f4203871744 in g_main_context_iteration (context=0x1770cf0, may_block=1) at /tmp/buildd/glib2.0-2.33.12+really2.32.4/./glib/gmain.c:3207
#4  0x00007f420abcf296 in QEventDispatcherGlib::processEvents (this=0x1770910, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#5  0x00007f420ab9f8af in QEventLoop::processEvents (this=this@entry=0x7f41e8075d10, flags=...) at kernel/qeventloop.cpp:149
#6  0x00007f420ab9fb38 in QEventLoop::exec (this=0x7f41e8075d10, flags=...) at kernel/qeventloop.cpp:204
#7  0x00007f420aaa2d70 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:501
#8  0x00007f420ab801bf in QInotifyFileSystemWatcherEngine::run (this=0x176ace0) at io/qfilesystemwatcher_inotify.cpp:248
#9  0x00007f420aaa5d0b in QThreadPrivate::start (arg=0x176ace0) at thread/qthread_unix.cpp:307
#10 0x00007f41f8413764 in ?? () from /usr/lib/x86_64-linux-gnu/libGL.so.1
#11 0x00007f4206a73b50 in start_thread (arg=<optimized out>) at pthread_create.c:304
#12 0x00007f420a257a7d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#13 0x0000000000000000 in ?? ()

Thread 8 (Thread 0x7f41e5fbb700 (LWP 12865)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:162
#1  0x00007f420aaa620b in wait (time=18446744073709551615, this=0x1916c20) at thread/qwaitcondition_unix.cpp:86
#2  QWaitCondition::wait (this=<optimized out>, mutex=0x190f790, time=18446744073709551615) at thread/qwaitcondition_unix.cpp:158
#3  0x00007f4208012301 in ThreadWeaver::WeaverImpl::blockThreadUntilJobsAreBeingAssigned (this=0x1916ad0, th=0x19170d0) at ../../../threadweaver/Weaver/WeaverImpl.cpp:365
#4  0x00007f4208014b4b in ThreadWeaver::WorkingHardState::applyForWork (this=0x19160c0, th=0x19170d0) at ../../../threadweaver/Weaver/WorkingHardState.cpp:71
#5  0x00007f4208014b64 in ThreadWeaver::WorkingHardState::applyForWork (this=0x19160c0, th=0x19170d0) at ../../../threadweaver/Weaver/WorkingHardState.cpp:74
#6  0x00007f42080139bf in ThreadWeaver::ThreadRunHelper::run (this=this@entry=0x7f41e5fbad40, parent=0x1916ad0, th=th@entry=0x19170d0) at ../../../threadweaver/Weaver/Thread.cpp:87
#7  0x00007f4208013a4b in ThreadWeaver::Thread::run (this=0x19170d0) at ../../../threadweaver/Weaver/Thread.cpp:142
#8  0x00007f420aaa5d0b in QThreadPrivate::start (arg=0x19170d0) at thread/qthread_unix.cpp:307
#9  0x00007f41f8413764 in ?? () from /usr/lib/x86_64-linux-gnu/libGL.so.1
#10 0x00007f4206a73b50 in start_thread (arg=<optimized out>) at pthread_create.c:304
#11 0x00007f420a257a7d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#12 0x0000000000000000 in ?? ()

Thread 7 (Thread 0x7f41e4f78700 (LWP 12867)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:162
#1  0x00007f420aaa620b in wait (time=18446744073709551615, this=0x1916c20) at thread/qwaitcondition_unix.cpp:86
#2  QWaitCondition::wait (this=<optimized out>, mutex=0x190f790, time=18446744073709551615) at thread/qwaitcondition_unix.cpp:158
#3  0x00007f4208012301 in ThreadWeaver::WeaverImpl::blockThreadUntilJobsAreBeingAssigned (this=0x1916ad0, th=0x1b1ae60) at ../../../threadweaver/Weaver/WeaverImpl.cpp:365
#4  0x00007f4208014b4b in ThreadWeaver::WorkingHardState::applyForWork (this=0x19160c0, th=0x1b1ae60) at ../../../threadweaver/Weaver/WorkingHardState.cpp:71
#5  0x00007f42080139bf in ThreadWeaver::ThreadRunHelper::run (this=this@entry=0x7f41e4f77d40, parent=0x1916ad0, th=th@entry=0x1b1ae60) at ../../../threadweaver/Weaver/Thread.cpp:87
#6  0x00007f4208013a4b in ThreadWeaver::Thread::run (this=0x1b1ae60) at ../../../threadweaver/Weaver/Thread.cpp:142
#7  0x00007f420aaa5d0b in QThreadPrivate::start (arg=0x1b1ae60) at thread/qthread_unix.cpp:307
#8  0x00007f41f8413764 in ?? () from /usr/lib/x86_64-linux-gnu/libGL.so.1
#9  0x00007f4206a73b50 in start_thread (arg=<optimized out>) at pthread_create.c:304
#10 0x00007f420a257a7d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#11 0x0000000000000000 in ?? ()

Thread 6 (Thread 0x7f41dffff700 (LWP 12868)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:162
#1  0x00007f420aaa620b in wait (time=18446744073709551615, this=0x1916c20) at thread/qwaitcondition_unix.cpp:86
#2  QWaitCondition::wait (this=<optimized out>, mutex=0x190f790, time=18446744073709551615) at thread/qwaitcondition_unix.cpp:158
#3  0x00007f4208012301 in ThreadWeaver::WeaverImpl::blockThreadUntilJobsAreBeingAssigned (this=0x1916ad0, th=0x7f41e00014e0) at ../../../threadweaver/Weaver/WeaverImpl.cpp:365
#4  0x00007f4208014b4b in ThreadWeaver::WorkingHardState::applyForWork (this=0x19160c0, th=0x7f41e00014e0) at ../../../threadweaver/Weaver/WorkingHardState.cpp:71
#5  0x00007f4208014b64 in ThreadWeaver::WorkingHardState::applyForWork (this=0x19160c0, th=0x7f41e00014e0) at ../../../threadweaver/Weaver/WorkingHardState.cpp:74
#6  0x00007f42080139bf in ThreadWeaver::ThreadRunHelper::run (this=this@entry=0x7f41dfffed40, parent=0x1916ad0, th=th@entry=0x7f41e00014e0) at ../../../threadweaver/Weaver/Thread.cpp:87
#7  0x00007f4208013a4b in ThreadWeaver::Thread::run (this=0x7f41e00014e0) at ../../../threadweaver/Weaver/Thread.cpp:142
#8  0x00007f420aaa5d0b in QThreadPrivate::start (arg=0x7f41e00014e0) at thread/qthread_unix.cpp:307
#9  0x00007f41f8413764 in ?? () from /usr/lib/x86_64-linux-gnu/libGL.so.1
#10 0x00007f4206a73b50 in start_thread (arg=<optimized out>) at pthread_create.c:304
#11 0x00007f420a257a7d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#12 0x0000000000000000 in ?? ()

Thread 5 (Thread 0x7f41df7fe700 (LWP 12869)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:162
#1  0x00007f420aaa620b in wait (time=18446744073709551615, this=0x1916c20) at thread/qwaitcondition_unix.cpp:86
#2  QWaitCondition::wait (this=<optimized out>, mutex=0x190f790, time=18446744073709551615) at thread/qwaitcondition_unix.cpp:158
#3  0x00007f4208012301 in ThreadWeaver::WeaverImpl::blockThreadUntilJobsAreBeingAssigned (this=0x1916ad0, th=0x1b1eb50) at ../../../threadweaver/Weaver/WeaverImpl.cpp:365
#4  0x00007f4208014b4b in ThreadWeaver::WorkingHardState::applyForWork (this=0x19160c0, th=0x1b1eb50) at ../../../threadweaver/Weaver/WorkingHardState.cpp:71
#5  0x00007f4208014b64 in ThreadWeaver::WorkingHardState::applyForWork (this=0x19160c0, th=0x1b1eb50) at ../../../threadweaver/Weaver/WorkingHardState.cpp:74
#6  0x00007f42080139bf in ThreadWeaver::ThreadRunHelper::run (this=this@entry=0x7f41df7fdd40, parent=0x1916ad0, th=th@entry=0x1b1eb50) at ../../../threadweaver/Weaver/Thread.cpp:87
#7  0x00007f4208013a4b in ThreadWeaver::Thread::run (this=0x1b1eb50) at ../../../threadweaver/Weaver/Thread.cpp:142
#8  0x00007f420aaa5d0b in QThreadPrivate::start (arg=0x1b1eb50) at thread/qthread_unix.cpp:307
#9  0x00007f41f8413764 in ?? () from /usr/lib/x86_64-linux-gnu/libGL.so.1
#10 0x00007f4206a73b50 in start_thread (arg=<optimized out>) at pthread_create.c:304
#11 0x00007f420a257a7d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#12 0x0000000000000000 in ?? ()

Thread 4 (Thread 0x7f41deffd700 (LWP 12870)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:162
#1  0x00007f42004adebd in WTF::TCMalloc_PageHeap::scavengerThread (this=0x7f4200e6e280) at wtf/FastMalloc.cpp:2499
#2  0x00007f42004adfc9 in WTF::TCMalloc_PageHeap::runScavengerThread (context=<optimized out>) at wtf/FastMalloc.cpp:1622
#3  0x00007f41f8413764 in ?? () from /usr/lib/x86_64-linux-gnu/libGL.so.1
#4  0x00007f4206a73b50 in start_thread (arg=<optimized out>) at pthread_create.c:304
#5  0x00007f420a257a7d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#6  0x0000000000000000 in ?? ()

Thread 3 (Thread 0x7f41de7fc700 (LWP 12871)):
#0  0x00007f420a24ce33 in *__GI___poll (fds=<optimized out>, nfds=<optimized out>, timeout=5459) at ../sysdeps/unix/sysv/linux/poll.c:87
#1  0x00007f4203871624 in g_main_context_poll (n_fds=1, fds=0xbbccb0, timeout=5459, context=0x1c5b660, priority=<optimized out>) at /tmp/buildd/glib2.0-2.33.12+really2.32.4/./glib/gmain.c:3440
#2  g_main_context_iterate (context=context@entry=0x1c5b660, block=block@entry=1, dispatch=dispatch@entry=1, self=<error reading variable: Unhandled dwarf expression opcode 0xfa>) at /tmp/buildd/glib2.0-2.33.12+really2.32.4/./glib/gmain.c:3141
#3  0x00007f4203871744 in g_main_context_iteration (context=0x1c5b660, may_block=1) at /tmp/buildd/glib2.0-2.33.12+really2.32.4/./glib/gmain.c:3207
#4  0x00007f420abcf296 in QEventDispatcherGlib::processEvents (this=0x1c5da10, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#5  0x00007f420ab9f8af in QEventLoop::processEvents (this=this@entry=0x7f41de7fbd40, flags=...) at kernel/qeventloop.cpp:149
#6  0x00007f420ab9fb38 in QEventLoop::exec (this=0x7f41de7fbd40, flags=...) at kernel/qeventloop.cpp:204
#7  0x00007f420aaa2d70 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:501
#8  0x00007f420aaa5d0b in QThreadPrivate::start (arg=0x1cba980) at thread/qthread_unix.cpp:307
#9  0x00007f41f8413764 in ?? () from /usr/lib/x86_64-linux-gnu/libGL.so.1
#10 0x00007f4206a73b50 in start_thread (arg=<optimized out>) at pthread_create.c:304
#11 0x00007f420a257a7d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#12 0x0000000000000000 in ?? ()

Thread 2 (Thread 0x7f41d7fff700 (LWP 12880)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:162
#1  0x00007f4207050e77 in ?? () from /usr/lib/x86_64-linux-gnu/libQtScript.so.4
#2  0x00007f4207050ea9 in ?? () from /usr/lib/x86_64-linux-gnu/libQtScript.so.4
#3  0x00007f41f8413764 in ?? () from /usr/lib/x86_64-linux-gnu/libGL.so.1
#4  0x00007f4206a73b50 in start_thread (arg=<optimized out>) at pthread_create.c:304
#5  0x00007f420a257a7d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#6  0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7f420da647a0 (LWP 12842)):
[KCrash Handler]
#6  0x00007f420a1af475 in *__GI_raise (sig=<optimized out>) at ../nptl/sysdeps/unix/sysv/linux/raise.c:64
#7  0x00007f420a1b26f0 in *__GI_abort () at abort.c:92
#8  0x00007f420aa9b722 in qt_message_output (msgType=msgType@entry=QtFatalMsg, buf=0x40e0018 "ASSERT: \"uint(i) < uint(size())\" in file /usr/include/qt4/QtCore/qstring.h, line 699") at global/qglobal.cpp:2284
#9  0x00007f420aa9ba98 in qt_message(QtMsgType, const char *, typedef __va_list_tag __va_list_tag *) (msgType=msgType@entry=QtFatalMsg, msg=0x7f420ac03528 "ASSERT: \"%s\" in file %s, line %d", ap=ap@entry=0x7fff0faa6788) at global/qglobal.cpp:2330
#10 0x00007f420aa9bc24 in qFatal (msg=<optimized out>) at global/qglobal.cpp:2513
#11 0x00007f420c8209e3 in QString::at (this=0x7fff0faa6960, i=87) at /usr/include/qt4/QtCore/qstring.h:699
#12 0x00007f420ca572b3 in FilenameLayoutWidget::inferScheme (this=0x7f41d809f580, s=...) at /home/thierry/kde/src/amarok/src/widgets/FilenameLayoutWidget.cpp:334
#13 0x00007f420ca56d85 in FilenameLayoutWidget::setScheme (this=0x7f41d809f580, scheme=...) at /home/thierry/kde/src/amarok/src/widgets/FilenameLayoutWidget.cpp:252
#14 0x00007f420ca57ecc in FilenameLayoutWidget::slotFormatPresetSelected (this=0x7f41d809f580, index=0) at /home/thierry/kde/src/amarok/src/widgets/FilenameLayoutWidget.cpp:424
#15 0x00007f420c5834f9 in FilenameLayoutWidget::qt_static_metacall (_o=0x7f41d809f580, _c=QMetaObject::InvokeMetaMethod, _id=5, _a=0x7fff0faa6b10) at /home/thierry/kde/build/amarok/src/moc_FilenameLayoutWidget.cpp:69
#16 0x00007f420abb654f in QMetaObject::activate (sender=0x7f41d809f440, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7fff0faa6b10) at kernel/qobject.cpp:3547
#17 0x00007f420b982961 in QComboBox::currentIndexChanged (this=this@entry=0x7f41d809f440, _t1=0) at .moc/release-shared/moc_qcombobox.cpp:316
#18 0x00007f420b9829c7 in QComboBoxPrivate::_q_emitCurrentIndexChanged (this=this@entry=0x7f41d80a0c40, index=...) at widgets/qcombobox.cpp:1278
#19 0x00007f420b982bd0 in QComboBoxPrivate::setCurrentIndex (this=this@entry=0x7f41d80a0c40, mi=...) at widgets/qcombobox.cpp:2046
#20 0x00007f420b982d46 in QComboBox::setCurrentIndex (this=this@entry=0x7f41d809f440, index=0) at widgets/qcombobox.cpp:2022
#21 0x00007f420b98409e in QComboBoxPrivate::_q_rowsRemoved (this=0x7f41d80a0c40, parent=...) at widgets/qcombobox.cpp:1071
#22 0x00007f420abb654f in QMetaObject::activate (sender=0x7f41d80a0f40, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7fff0faa6dd0) at kernel/qobject.cpp:3547
#23 0x00007f420ac00244 in QAbstractItemModel::rowsRemoved (this=<optimized out>, _t1=..., _t2=1, _t3=1) at .moc/release-shared/moc_qabstractitemmodel.cpp:211
#24 0x00007f420ab9a51d in QAbstractItemModel::endRemoveRows (this=0x7f41d80a0f40) at kernel/qabstractitemmodel.cpp:2487
#25 0x00007f420bb47664 in QStandardItemModel::removeRows (this=<optimized out>, row=1, count=1, parent=...) at itemviews/qstandarditemmodel.cpp:2800
#26 0x00007f420ca5825c in FilenameLayoutWidget::slotRemoveFormat (this=0x7f41d809f580) at /home/thierry/kde/src/amarok/src/widgets/FilenameLayoutWidget.cpp:445
#27 0x00007f420c583515 in FilenameLayoutWidget::qt_static_metacall (_o=0x7f41d809f580, _c=QMetaObject::InvokeMetaMethod, _id=7, _a=0x7fff0faa7030) at /home/thierry/kde/build/amarok/src/moc_FilenameLayoutWidget.cpp:71
#28 0x00007f420abb654f in QMetaObject::activate (sender=0x7f41d80a1950, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7fff0faa7030) at kernel/qobject.cpp:3547
#29 0x00007f420bc15f32 in QAbstractButton::clicked (this=<optimized out>, _t1=false) at .moc/release-shared/moc_qabstractbutton.cpp:220
#30 0x00007f420b96a06e in QAbstractButtonPrivate::emitClicked (this=this@entry=0x7f41d80a1ea0) at widgets/qabstractbutton.cpp:548
#31 0x00007f420b96a8a0 in QAbstractButtonPrivate::click (this=this@entry=0x7f41d80a1ea0) at widgets/qabstractbutton.cpp:541
#32 0x00007f420b96ab0c in QAbstractButton::mouseReleaseEvent (this=0x7f41d80a1950, e=0x7fff0faa78d0) at widgets/qabstractbutton.cpp:1123
#33 0x00007f420b5ffe10 in QWidget::event (this=0x7f41d80a1950, event=0x7fff0faa78d0) at kernel/qwidget.cpp:8371
#34 0x00007f420b5b070c in QApplicationPrivate::notify_helper (this=this@entry=0xbc8cd0, receiver=receiver@entry=0x7f41d80a1950, e=e@entry=0x7fff0faa78d0) at kernel/qapplication.cpp:4556
#35 0x00007f420b5b53eb in QApplication::notify (this=<optimized out>, receiver=0x7f41d80a1950, e=0x7fff0faa78d0) at kernel/qapplication.cpp:4099
#36 0x00007f420d485886 in KApplication::notify (this=0x7fff0faa8480, receiver=0x7f41d80a1950, event=0x7fff0faa78d0) at ../../kdeui/kernel/kapplication.cpp:311
#37 0x00007f420aba0b5e in QCoreApplication::notifyInternal (this=0x7fff0faa8480, receiver=0x7f41d80a1950, event=0x7fff0faa78d0) at kernel/qcoreapplication.cpp:915
#38 0x00007f420b5b154b in sendEvent (event=<optimized out>, receiver=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:231
#39 QApplicationPrivate::sendMouseEvent (receiver=0x7f41d80a1950, event=0x7fff0faa78d0, alienWidget=0x7f41d80a1950, nativeWidget=0x7f41d80ad6b0, buttonDown=0x7f420c0862a8, lastMouseReceiver=..., spontaneous=true) at kernel/qapplication.cpp:3167
#40 0x00007f420b62bfc4 in QETWidget::translateMouseEvent (this=this@entry=0x7f41d80ad6b0, event=event@entry=0x7fff0faa8040) at kernel/qapplication_x11.cpp:4523
#41 0x00007f420b62ad51 in QApplication::x11ProcessEvent (this=0x7fff0faa8480, event=0x7fff0faa8040) at kernel/qapplication_x11.cpp:3646
#42 0x00007f420b651bc2 in x11EventSourceDispatch (s=s@entry=0xbc9f00, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#43 0x00007f4203871355 in g_main_dispatch (context=0xbca300) at /tmp/buildd/glib2.0-2.33.12+really2.32.4/./glib/gmain.c:2539
#44 g_main_context_dispatch (context=context@entry=0xbca300) at /tmp/buildd/glib2.0-2.33.12+really2.32.4/./glib/gmain.c:3075
#45 0x00007f4203871688 in g_main_context_iterate (context=context@entry=0xbca300, block=block@entry=1, dispatch=dispatch@entry=1, self=<error reading variable: Unhandled dwarf expression opcode 0xfa>) at /tmp/buildd/glib2.0-2.33.12+really2.32.4/./glib/gmain.c:3146
#46 0x00007f4203871744 in g_main_context_iteration (context=0xbca300, may_block=1) at /tmp/buildd/glib2.0-2.33.12+really2.32.4/./glib/gmain.c:3207
#47 0x00007f420abcf296 in QEventDispatcherGlib::processEvents (this=0xa5dad0, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#48 0x00007f420b65183e in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#49 0x00007f420ab9f8af in QEventLoop::processEvents (this=this@entry=0x7fff0faa8410, flags=...) at kernel/qeventloop.cpp:149
#50 0x00007f420ab9fb38 in QEventLoop::exec (this=0x7fff0faa8410, flags=...) at kernel/qeventloop.cpp:204
#51 0x00007f420aba4cf8 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1187
#52 0x000000000040cd78 in main (argc=1, argv=0x7fff0faaaa08) at /home/thierry/kde/src/amarok/src/main.cpp:329
Comment 1 Ralf Engels 2013-02-03 12:53:56 UTC
Nice, I already found the bug but I would also like to understand why it crasches for you.

Can you attach the content of the OrganizeCollectionDialog section in ~/.kde/share/config/amarokrc
Mine looks like this:

[OrganizeCollectionDialog]
Custom Scheme=%artist%/%album%/%track%_-_%title%
Format Presets=Default#DELIM#%artist%/%album%/%track%_-_%title%#DELIM#selected
Mode=Basic
Organize Directory=/home/ralf/Musik/Audiobooks
Comment 2 Thierry Göckel 2013-02-03 13:04:44 UTC
Sure, this is what it looks like now:

[OrganizeCollectionDialog]
Custom Scheme=%initial%/%thealbumartist%/%year%/%album%/{Disc %discnumber%/}%track% - %title% (%theartist%)
Format Presets=Various Artists#DELIM#%initial%/%albumartist%/%year%/%album%/{Disc %discnumber%/}%track% - %title% (%artist%),Default#DELIM#%initial%/%albumartist%/%year%/%album%/{Disc %discnumber%/}%track% - %title%#DELIM#selected
Ignore The=false
Mode=Advanced
Organize Directory=/mnt/music
Vfat Compatible=false
Comment 3 Ralf Engels 2013-02-03 19:12:29 UTC
Git commit 07dafe8673c6b254db5c58d0c9c9898c5d6aadc1 by Ralf Engels.
Committed on 03/02/2013 at 17:41.
Pushed by rengels into branch 'master'.

Crash when switching/removing organize collection presets [@ FilenameLayoutWidget::inferScheme]
FIXED-IN: 2.8

M  +1    -1    src/widgets/FilenameLayoutWidget.cpp

http://commits.kde.org/amarok/07dafe8673c6b254db5c58d0c9c9898c5d6aadc1