Crash when switching/removing organize collection presets [@ FilenameLayoutWidget::inferScheme]

BUG: 314344
FIXED-IN: 2.8